@@ -1,5 +1,9 @@
 = Version descriptions
 
+== master
+
+- No longer using `android:onClick`, which is broken on older versions of Android
+
 == 7.2.5
 
 - Resolves: gh#208 add separators between sleep items in the main activity
